# python2

./: main.py  pyproject.toml  test.py
workspace/: conversion.py  exporter_main_v2.py  object_Testing.ipynb  partition_dataset.py  tfrecords.py
workspace/annotations/: labels-map.pbtxt  test.record  train.record
workspace/exported-models/my_model/: pipeline.config
workspace/exported-models/my_model/checkpoint/: checkpoint  ckpt-0.index
workspace/images/: 11.xml  6.xml  7.xml  base - Copy (12) - Copy.xml  base - Copy (4).xml  base - Copy (5) - Copy.xml  base - Copy (7) - Copy.xml  base180 - Copy (3).xml  base90 (2).xml  basehorz - Copy (2).xml
workspace/images - Copy/: 10.xml  4.xml  5.xml  base - Copy (11) - Copy.xml  base - Copy (2).xml  base - Copy (4) - Copy.xml  base - Copy (8) - Copy.xml  base - Copy.xml  test_labels.csv  train_labels.csv
workspace/images/test/: 8.xml
workspace/images/train/: base - Copy (10) - Copy.xml  base - Copy (3) - Copy.xml  base - Copy (3).xml  base - Copy (5).xml  base - Copy (6) - Copy.xml  base - Copy (9) - Copy.xml
workspace/models/efficient/: checkpoint  ckpt-10.index  ckpt-11.index  ckpt-12.index  ckpt-13.index  ckpt-7.index  ckpt-8.index  ckpt-9.index  pipeline.config
workspace/models/efficient/eval/: events.out.tfevents.1660278449.UT-LTP-956.11276.0.v2
workspace/models/efficient/train/: events.out.tfevents.1660201690.UT-LTP-956.24404.0.v2  events.out.tfevents.1660202539.UT-LTP-956.22616.0.v2
workspace/pre-trained-models/ssd_mobilenet_v2_fpnlite_320x320_coco17_tpu-8/: pipeline.config
(+1 files in other folders)
