[tool.poetry]
name = "radiator"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
matplotlib = "3.2.2"
numpy = "1.21.6"
opencv-python = "4.6.0.66"
pandas = "1.3.5"
keras = "2.8.0"
lxml = "4.9.1"
scikit-learn = "1.0.2"
Cython = "^0.29.32"
tf-slim = "^1.1.0"
install = "^1.3.5"
lvis = "^0.5.3"
tensorflow-object-detection-api = "^0.1.1"
matplotlib-venn = "0.11.7"
plotly = "5.5.0"
tensorflow = "2.8.2"
pylint = "^2.15.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
